Autocomplete Comment Fix Bug

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,3 +3,5 @@
 countriesCsvUri = "/csv/countries.csv"
 airportsCsvUri = "/csv/airports.csv"
 runwaysCsvUri = "/csv/runways.csv"
+
+play.filters.enabled += "play.filters.headers.SecurityHeadersFilter"
